--- a/TapWinners/app/src/main/res/layout/activity_play.xml
+++ b/TapWinners/app/src/main/res/layout/activity_play.xml
@@ -2,7 +2,7 @@
 <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:onClick="clicking"
+    android:id="@+id/playScreen"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="kmitl.finalproject.nattapon58070036.tapwinners.PlayActivity">
@@ -12,15 +12,15 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginLeft="8dp"
+        android:layout_marginRight="8dp"
         android:layout_marginTop="8dp"
         android:fontFamily="casual"
         android:text="SCORE"
         android:textColor="?attr/colorControlActivated"
         android:textSize="40sp"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintRight_toLeftOf="@+id/pbTimer"
-        android:layout_marginRight="8dp" />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/tvStartGame"
@@ -47,9 +47,9 @@
         android:layout_centerHorizontal="true"
         android:layout_centerVertical="true"
         android:layout_marginRight="8dp"
+        android:layout_marginTop="8dp"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        android:layout_marginTop="8dp" />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/tvTimer"
@@ -57,15 +57,15 @@
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
         android:layout_centerVertical="true"
+        android:layout_marginBottom="8dp"
+        android:layout_marginLeft="8dp"
+        android:layout_marginRight="8dp"
+        android:layout_marginTop="8dp"
         android:text="0"
         android:textSize="40sp"
-        android:layout_marginRight="8dp"
-        app:layout_constraintRight_toRightOf="@+id/pbTimer"
-        android:layout_marginLeft="8dp"
-        app:layout_constraintLeft_toLeftOf="@+id/pbTimer"
-        app:layout_constraintTop_toTopOf="@+id/pbTimer"
-        android:layout_marginTop="8dp"
         app:layout_constraintBottom_toBottomOf="@+id/pbTimer"
-        android:layout_marginBottom="8dp" />
+        app:layout_constraintLeft_toLeftOf="@+id/pbTimer"
+        app:layout_constraintRight_toRightOf="@+id/pbTimer"
+        app:layout_constraintTop_toTopOf="@+id/pbTimer" />
 
 </android.support.constraint.ConstraintLayout>
