--- a/TapWinners/app/src/main/res/layout/activity_main.xml
+++ b/TapWinners/app/src/main/res/layout/activity_main.xml
@@ -5,11 +5,13 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="kmitl.finalproject.nattapon58070036.tapwinners.MainActivity">
-
-    <ImageView
+    <de.hdodenhof.circleimageview.CircleImageView
         android:id="@+id/profileImage"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
         android:layout_width="169dp"
-        android:layout_height="152dp"
+        android:layout_height="169dp"
+        app:civ_border_width="4dp"
+        app:civ_border_color="@android:color/holo_green_dark"
         android:layout_marginLeft="8dp"
         android:layout_marginRight="8dp"
         android:layout_marginTop="8dp"
@@ -52,4 +54,17 @@
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/nameText" />
+
+    <Button
+        android:id="@+id/btnChatRoom"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="CHATROOM"
+        android:layout_marginTop="18dp"
+        app:layout_constraintTop_toBottomOf="@+id/btnPlay"
+        android:layout_marginLeft="8dp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        android:layout_marginRight="8dp"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintHorizontal_bias="0.501" />
 </android.support.constraint.ConstraintLayout>
