--- a/TapWinners/app/src/main/res/layout/chatlist_item.xml
+++ b/TapWinners/app/src/main/res/layout/chatlist_item.xml
@@ -9,17 +9,31 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal">
-        <ImageView
+        <de.hdodenhof.circleimageview.CircleImageView
             android:id="@+id/chatProfileImage"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            xmlns:app="http://schemas.android.com/apk/res-auto"
+            android:layout_width="25sp"
+            android:layout_height="25dp"
             android:paddingLeft="0dp"
             app:srcCompat="@mipmap/ic_launcher" />
         <TextView
-            android:id="@+id/msgText"
+            android:id="@+id/tvPlayerName"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
-            android:text="Smart : Hello"
+            android:text="Smart"
+            android:textSize="20dp"
+            android:gravity="center"/>
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:text=" : "
+            android:textSize="20dp"
+            android:gravity="center"/>
+        <TextView
+            android:id="@+id/tvMessage"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:text="Hello"
             android:textSize="20dp"
             android:gravity="center"/>
 
