--- a/TapWinners/app/src/main/res/layout/activity_main.xml
+++ b/TapWinners/app/src/main/res/layout/activity_main.xml
@@ -59,12 +59,23 @@
         android:id="@+id/btnChatRoom"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="CHATROOM"
-        android:layout_marginTop="18dp"
-        app:layout_constraintTop_toBottomOf="@+id/btnPlay"
         android:layout_marginLeft="8dp"
-        app:layout_constraintLeft_toLeftOf="parent"
         android:layout_marginRight="8dp"
+        android:layout_marginTop="8dp"
+        android:text="CHATROOM"
+        app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintHorizontal_bias="0.501" />
+        app:layout_constraintTop_toBottomOf="@+id/btnScoreboard" />
+
+    <Button
+        android:id="@+id/btnScoreboard"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="8dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        android:text="scoreboard"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/btnPlay" />
 </android.support.constraint.ConstraintLayout>
