--- a/TapWinners/app/src/main/res/layout/chatlist_item.xml
+++ b/TapWinners/app/src/main/res/layout/chatlist_item.xml
@@ -1,41 +1,44 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:orientation="vertical">
 
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal">
-        <de.hdodenhof.circleimageview.CircleImageView
+
+        <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
             android:id="@+id/chatProfileImage"
-            xmlns:app="http://schemas.android.com/apk/res-auto"
-            android:layout_width="25sp"
-            android:layout_height="25dp"
-            android:paddingLeft="0dp"
+            android:layout_width="35sp"
+            android:layout_height="35dp"
             app:srcCompat="@mipmap/ic_launcher" />
+
         <TextView
             android:id="@+id/tvPlayerName"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
+            android:gravity="center"
             android:text="Smart"
-            android:textSize="20dp"
-            android:gravity="center"/>
+            android:textSize="20dp" />
+
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
+            android:gravity="center"
             android:text=" : "
-            android:textSize="20dp"
-            android:gravity="center"/>
+            android:textSize="20dp" />
+
         <TextView
             android:id="@+id/tvMessage"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
+            android:gravity="center"
             android:text="Hello"
-            android:textSize="20dp"
-            android:gravity="center"/>
+            android:textSize="20dp" />
 
     </LinearLayout>
 
