--- a/TapWinners/app/src/main/res/layout/activity_chat_room.xml
+++ b/TapWinners/app/src/main/res/layout/activity_chat_room.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     tools:context="kmitl.finalproject.nattapon58070036.tapwinner.ChatRoomActivity">
     <EditText
-        android:id="@+id/editText"
+        android:id="@+id/et_message"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:ems="10"
@@ -29,12 +29,12 @@
         android:layout_height="wrap_content"
         android:layout_marginRight="16dp"
         android:text="send"
-        app:layout_constraintBaseline_toBaselineOf="@+id/editText"
+        app:layout_constraintBaseline_toBaselineOf="@+id/et_message"
         app:layout_constraintRight_toRightOf="parent"
         android:layout_marginEnd="16dp" />
 
     <android.support.v7.widget.RecyclerView
-        android:id="@+id/listView"
+        android:id="@+id/recyclerView"
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:layout_marginLeft="0dp"
@@ -45,5 +45,5 @@
         android:layout_marginRight="0dp"
         app:layout_constraintRight_toRightOf="parent"
         android:layout_marginBottom="8dp"
-        app:layout_constraintBottom_toTopOf="@+id/editText" />
+        app:layout_constraintBottom_toTopOf="@+id/et_message" />
 </android.support.constraint.ConstraintLayout>
