--- a/TapWinners/app/src/main/res/layout/activity_chat_room.xml
+++ b/TapWinners/app/src/main/res/layout/activity_chat_room.xml
@@ -12,7 +12,7 @@
         android:ems="10"
         android:maxLength="20"
         android:inputType="textPersonName"
-        android:hint="messenge"
+        android:hint="@string/message"
         app:layout_constraintBottom_toBottomOf="parent"
         android:layout_marginBottom="16dp"
         android:layout_marginLeft="26dp"
@@ -28,7 +28,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginRight="16dp"
-        android:text="send"
+        android:text="@string/send"
         app:layout_constraintBaseline_toBaselineOf="@+id/et_message"
         app:layout_constraintRight_toRightOf="parent"
         android:layout_marginEnd="16dp" />
