--- a/TapWinners/app/src/main/res/layout/activity_chat_room.xml
+++ b/TapWinners/app/src/main/res/layout/activity_chat_room.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="kmitl.finalproject.nattapon58070036.tapwinner.ChatRoomActivity">
+    tools:context="kmitl.finalproject.nattapon58070036.tapwinner.chatroom.ChatRoomActivity">
     <EditText
         android:id="@+id/et_message"
         android:layout_width="0dp"
