--- a/TapWinners/app/src/main/res/layout/activity_current_score.xml
+++ b/TapWinners/app/src/main/res/layout/activity_current_score.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context="kmitl.finalproject.nattapon58070036.tapwinner.CurrentScoreActivity">
+    tools:context="kmitl.finalproject.nattapon58070036.tapwinner.playonline.CurrentScoreActivity">
 
 
     <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
