--- a/TapWinners/app/src/main/res/layout/activity_score_board.xml
+++ b/TapWinners/app/src/main/res/layout/activity_score_board.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="kmitl.finalproject.nattapon58070036.tapwinner.ScoreBoardActivity">
+    tools:context="kmitl.finalproject.nattapon58070036.tapwinner.playonline.ScoreBoardActivity">
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/recyclerView"
