--- a/TapWinners/app/src/main/res/layout/fragment_player_two.xml
+++ b/TapWinners/app/src/main/res/layout/fragment_player_two.xml
@@ -1,43 +1,28 @@
-<?xml version="1.0" encoding="utf-8"?>
 <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/playScreen"
+    android:id="@+id/player2Fragment"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="kmitl.finalproject.nattapon58070036.tapwinner.playonline.PlayActivity">
+    android:background="@android:color/holo_blue_light"
+    android:rotation="180"
+    tools:context=".playwithfriend.fragment.PlayerTwoFragment">
 
     <TextView
-        android:id="@+id/scoreText"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="8dp"
-        android:layout_marginRight="8dp"
-        android:layout_marginTop="8dp"
-        android:fontFamily="casual"
-        android:text="SCORE"
-        android:textColor="?attr/colorControlActivated"
-        android:textSize="40sp"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toLeftOf="@+id/pbTimer"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <TextView
-        android:id="@+id/tvStartGame"
+        android:id="@+id/tvScore"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="8dp"
-        android:layout_marginLeft="8dp"
-        android:layout_marginRight="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
-        android:fontFamily="casual"
+        android:gravity="center"
         android:text="Tap To Start"
-        android:textSize="50sp"
+        android:textSize="50dp"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.498" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <ProgressBar
         android:id="@+id/pbTimer"
@@ -67,5 +52,6 @@
         app:layout_constraintLeft_toLeftOf="@+id/pbTimer"
         app:layout_constraintRight_toRightOf="@+id/pbTimer"
         app:layout_constraintTop_toTopOf="@+id/pbTimer" />
+
 
 </android.support.constraint.ConstraintLayout>
