--- a/TapWinners/app/src/main/res/layout/activity_chat_room.xml
+++ b/TapWinners/app/src/main/res/layout/activity_chat_room.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/main_header_selector"
     tools:context="kmitl.finalproject.nattapon58070036.tapwinner.chatroom.ChatRoomActivity">
     <EditText
         android:id="@+id/et_message"
@@ -29,12 +30,14 @@
         android:layout_height="wrap_content"
         android:layout_marginRight="16dp"
         android:text="@string/send"
+        android:background="@drawable/button_background"
         app:layout_constraintBaseline_toBaselineOf="@+id/et_message"
         app:layout_constraintRight_toRightOf="parent"
         android:layout_marginEnd="16dp" />
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/recyclerView"
+        android:background="@drawable/main_header_selector"
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:layout_marginLeft="0dp"
