--- a/TapWinners/app/src/main/res/layout/fragment_player_one.xml
+++ b/TapWinners/app/src/main/res/layout/fragment_player_one.xml
@@ -4,7 +4,7 @@
     android:id="@+id/player1Fragment"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@android:color/holo_red_light"
+    android:background="#e076df"
     tools:context=".playwithfriend.fragment.PlayerOneFragment">
 
     <TextView
