--- a/TapWinners/app/src/main/res/layout/activity_current_score.xml
+++ b/TapWinners/app/src/main/res/layout/activity_current_score.xml
@@ -5,6 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
+    android:background="@drawable/main_header_selector"
     tools:context="kmitl.finalproject.nattapon58070036.tapwinner.playonline.CurrentScoreActivity">
 
 
@@ -45,7 +46,7 @@
         android:layout_marginBottom="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
-        android:backgroundTint="@android:color/holo_green_light"
+        android:background="@drawable/button_background"
         android:text="play again"
         android:textSize="25sp"
         app:layout_constraintBottom_toBottomOf="parent"
