--- a/TapWinners/app/src/main/res/layout/activity_login.xml
+++ b/TapWinners/app/src/main/res/layout/activity_login.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/main_header_selector"
     tools:context="kmitl.finalproject.nattapon58070036.tapwinner.LoginActivity">
 
     <com.facebook.login.widget.LoginButton
