--- a/TapWinners/app/src/main/res/layout/activity_main.xml
+++ b/TapWinners/app/src/main/res/layout/activity_main.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/main_header_selector">
     tools:context="kmitl.finalproject.nattapon58070036.tapwinner.MainActivity">
 
     <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
@@ -47,6 +48,7 @@
         android:layout_height="wrap_content"
         android:layout_marginRight="8dp"
         android:layout_marginTop="8dp"
+        android:background="@drawable/button_background"
         android:text="Logout"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -58,7 +60,7 @@
         android:layout_marginLeft="8dp"
         android:layout_marginRight="8dp"
         android:layout_marginTop="16dp"
-        android:backgroundTint="@android:color/holo_green_light"
+        android:background="@drawable/button_background"
         android:text="PLAY ONLINE"
         android:textStyle="bold"
         app:layout_constraintBottom_toTopOf="@+id/btnVSFriend"
@@ -75,7 +77,7 @@
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="24dp"
-        android:backgroundTint="@android:color/holo_green_light"
+        android:background="@drawable/button_background"
         android:text="VS FRIEND"
         android:textStyle="bold"
         app:layout_constraintBottom_toTopOf="@+id/btnChatRoom"
@@ -93,7 +95,7 @@
         android:layout_marginLeft="8dp"
         android:layout_marginRight="8dp"
         android:layout_marginTop="24dp"
-        android:backgroundTint="@android:color/holo_green_light"
+        android:background="@drawable/button_background"
         android:text="CHATROOM"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -108,7 +110,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
-        android:backgroundTint="@android:color/holo_green_light"
+        android:background="@drawable/button_background"
         android:text="scoreboard"
         android:textStyle="bold"
         app:layout_constraintStart_toStartOf="parent"
