--- a/TapWinners/app/src/main/res/layout/activity_score_board.xml
+++ b/TapWinners/app/src/main/res/layout/activity_score_board.xml
@@ -4,9 +4,11 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/main_header_selector"
     tools:context="kmitl.finalproject.nattapon58070036.tapwinner.playonline.ScoreBoardActivity">
 
     <android.support.v7.widget.RecyclerView
+        android:background="@drawable/main_header_selector"
         android:id="@+id/recyclerView"
         android:layout_width="0dp"
         android:layout_height="0dp"
