--- a/TapWinners/app/src/main/res/layout/activity_main.xml
+++ b/TapWinners/app/src/main/res/layout/activity_main.xml
@@ -47,7 +47,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginRight="8dp"
-        android:layout_marginTop="8dp"
+        android:layout_marginTop="16dp"
         android:background="@drawable/button_background"
         android:text="Logout"
         app:layout_constraintRight_toRightOf="parent"
@@ -104,13 +104,13 @@
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/btnVSFriend" />
 
-    <Button
+    <ImageView
         android:id="@+id/btnScoreboard"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
-        android:background="@drawable/button_background"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="16dp"
+        android:background="@drawable/trophy"
         android:text="scoreboard"
         android:textStyle="bold"
         app:layout_constraintStart_toStartOf="parent"
