--- a/TapWinners/app/src/main/res/layout/fragment_player_one.xml
+++ b/TapWinners/app/src/main/res/layout/fragment_player_one.xml
@@ -4,7 +4,7 @@
     android:id="@+id/player1Fragment"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#e076df"
+    android:background="@color/pink"
     tools:context=".playwithfriend.fragment.PlayerOneFragment">
 
     <TextView
@@ -16,6 +16,7 @@
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
         android:gravity="center"
+        android:fontFamily="casual"
         android:text="Tap To Start"
         android:textSize="50dp"
         app:layout_constraintBottom_toBottomOf="parent"
