--- a/TapWinners/app/src/main/res/layout/activity_play.xml
+++ b/TapWinners/app/src/main/res/layout/activity_play.xml
@@ -28,17 +28,17 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="8dp"
-        android:layout_marginLeft="8dp"
-        android:layout_marginRight="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
         android:fontFamily="casual"
+        android:gravity="center"
         android:text="Tap To Start"
         android:textSize="50sp"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.498" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <ProgressBar
         android:id="@+id/pbTimer"
@@ -68,5 +68,6 @@
         app:layout_constraintLeft_toLeftOf="@+id/pbTimer"
         app:layout_constraintRight_toRightOf="@+id/pbTimer"
         app:layout_constraintTop_toTopOf="@+id/pbTimer" />
+
 
 </android.support.constraint.ConstraintLayout>
