--- a/TapWinners/app/src/main/res/layout/fragment_player_two.xml
+++ b/TapWinners/app/src/main/res/layout/fragment_player_two.xml
@@ -4,7 +4,7 @@
     android:id="@+id/player2Fragment"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#8482d4"
+    android:background="@color/blue"
     android:rotation="180"
     tools:context=".playwithfriend.fragment.PlayerTwoFragment">
 
@@ -16,6 +16,7 @@
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
+        android:fontFamily="casual"
         android:gravity="center"
         android:text="Tap To Start"
         android:textSize="50dp"
