--- a/TapWinners/app/src/main/res/layout/scorelist_item.xml
+++ b/TapWinners/app/src/main/res/layout/scorelist_item.xml
@@ -5,19 +5,21 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical">
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
+
         <TextView
             android:id="@+id/rankText"
             android:layout_width="55dp"
             android:layout_height="wrap_content"
-            android:layout_marginStart="8dp"
             android:layout_gravity="center"
+            android:layout_marginStart="8dp"
             android:text="100"
             android:textSize="30sp" />
 
-        <ImageView
+        <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
             android:id="@+id/imageView"
             android:layout_width="60dp"
             android:layout_height="60dp"
@@ -31,21 +33,20 @@
             android:id="@+id/playerNameText"
             android:layout_width="150dp"
             android:layout_height="wrap_content"
+            android:layout_gravity="center"
             android:layout_marginStart="16dp"
             android:text="playername"
-            android:layout_gravity="center"
             android:textSize="30sp" />
 
         <TextView
             android:id="@+id/highScoreText"
             android:layout_width="55dp"
             android:layout_height="wrap_content"
+            android:layout_gravity="center"
             android:layout_marginStart="16dp"
             android:text="100"
-            android:layout_gravity="center"
             android:textSize="30sp" />
     </LinearLayout>
-
 
 
 </LinearLayout>
