--- a/TapWinners/app/src/main/res/values/colors.xml
+++ b/TapWinners/app/src/main/res/values/colors.xml
@@ -3,4 +3,6 @@
     <color name="colorPrimary">#3F51B5</color>
     <color name="colorPrimaryDark">#303F9F</color>
     <color name="colorAccent">#0029e100</color>
+    <color name="blue">#8482d4</color>
+    <color name="pink">#e076df</color>
 </resources>
