--- a/TapWinners/app/src/main/res/layout/activity_versus_friend.xml
+++ b/TapWinners/app/src/main/res/layout/activity_versus_friend.xml
@@ -6,6 +6,7 @@
     android:layout_height="match_parent"
     android:layout_weight="2"
     android:orientation="vertical"
+    android:id="@+id/vsFriendView"
     tools:context="kmitl.finalproject.nattapon58070036.tapwinner.playwithfriend.VersusFriendActivity">
 
     <fragment
